# Pricing-API-and-more

./: .gitignore  README.md  api.py  main.py  pricing_engine.py  pyproject.toml  requirements.txt
.github/workflows/: sync-model-artifacts.yml
connectors/: README.md  pricepilot-api.openapi.json  pricepilot-api.openapi.yaml  pricepilot-quote-card.json
docs/: ARCHITECTURE.md  PricePilot-overview.md  PricePilot-technical-report.md  copilot-instructions.md  pricing-features-reference.md
keboola-config/supervisord/services/: app.conf
machine_learning/: FEATURE_IMPORTANCE.md  MODEL_LOG.md  MODEL_METRICS.md  README.md  fee_model_importance.csv  fee_model_metrics.csv  fee_model_runs.csv  generate_training_data.py  keboola_fee_training_script.py  keboola_training_script.py  pricing_factors_snapshot.csv  sync_model_artifacts.py  train_fee_model.py  train_model.py
pricing_rules_calculator/: _build_deploy_source.py  main.py
pricing_rules_calculator/_internal/: build_pricing_factors_sql.py  main_deployable.py  pricing_factors_real.sql
pricing_rules_calculator/demo_data/: pricing_factors_esa_zoning.csv
