[project]
name = "pricepilot-api"
version = "0.1.0"
description = "ML pricing REST API for Partner Engineering and Science (Keboola Data App)"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "pandas>=2.0.0",
    "requests>=2.32.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "pricing_engine"]
